--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["MaxOhn <ohn.m@hotmail.de>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.5.3"
 chrono = "0.4"
+num-traits = "0.2.11"
+num-derive = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
