--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,15 @@ name = "rosu"
 version = "0.1.0"
 authors = ["MaxOhn <ohn.m@hotmail.de>"]
 edition = "2018"
+description = "A wrapper for the osu! API."
+license = "MIT"
+readme = "./Readme.md"
+keywords = ["osu", "osu!", "api", "wrapper"]
+repository = "https://github.com/MaxOhn/rosu"
 
 [dependencies]
 chrono = "0.4"
 itertools = "0.8.2"
-num-traits = "0.2.11"
-num-derive = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
