--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,16 @@ documentation = "https://docs.rs/rosu/"
 
 [dependencies]
 chrono = "0.4"
-itertools = "0.8.2"
+itertools = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-log = "0.4.8"
-futures = { version = "0.3.1", features = ["compat"] }
-hyper = "0.13.1"
-hyper-tls = "0.4.1"
+log = "0.4"
+futures = { version = "0.3", features = ["compat"] }
+hyper = "0.13"
+hyper-tls = "0.4"
 
 [dev-dependencies]
-env_logger = "0.7.1"
+env_logger = "0.7"
 kankyo = "0.2"
-tokio = "0.2.9"
+tokio = { version = "0.2", features = ["full"] }
