--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rosu"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["MaxOhn <ohn.m@hotmail.de>"]
 edition = "2018"
 description = "A wrapper for the osu! API."
@@ -12,14 +12,12 @@ documentation = "https://docs.rs/rosu/"
 
 [dependencies]
 chrono = "0.4"
-itertools = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 log = "0.4"
 futures = { version = "0.3", features = ["compat"] }
-hyper = "0.13"
-hyper-tls = "0.4"
+reqwest = "0.10"
 
 [dev-dependencies]
 env_logger = "0.7"
