--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,22 @@ documentation = "https://docs.rs/rosu/"
 
 [dependencies]
 chrono       = "0.4"
+governor     = "0.2"
+log          = "0.4"
 serde        = "1.0"
 serde_derive = "1.0"
 serde_json   = "1.0"
-log          = "0.4"
-futures      = { version = "0.3", features = ["compat"] }
-reqwest      = { version = "0.10", features = ["rustls-tls"] }
+
+[dependencies.futures]
+version          = "0.3"
+default-features = false
+
+[dependencies.reqwest]
+version          = "0.10"
+default-features = false
+features         = ["rustls-tls"]
 
 [dev-dependencies]
 env_logger = "0.7"
 kankyo     = "0.2"
-tokio      = { version = "0.2", features = ["full"] }
+tokio      = { version = "0.2", features = ["rt-core", "macros"] }
