--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository    = "https://github.com/MaxOhn/rosu"
 documentation = "https://docs.rs/rosu/"
 
 [dependencies]
+bitflags     = "1.2"
 chrono       = "0.4"
 governor     = "0.2"
 log          = "0.4"
