--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/rosu/"
 [features]
 default = []
 serialize = ["serde_repr"]
+metrics = ["prometheus"]
 
 [dependencies]
 bitflags     = "1.2"
@@ -34,6 +35,10 @@ features         = ["rustls-tls"]
 
 [dependencies.serde_repr]
 version  = "0.1"
+optional = true
+
+[dependencies.prometheus]
+version  = "0.9"
 optional = true
 
 [dev-dependencies]
