Simplified String/&str arguments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name          = "rosu"
 version       = "0.2.2"
 authors       = ["MaxOhn <ohn.m@hotmail.de>"]
 edition       = "2018"
-description   = "A wrapper for the osu! API."
+description   = "A fully functional wrapper for the osu! API"
 license       = "MIT"
 readme        = "Readme.md"
 keywords      = ["osu", "api", "wrapper"]
