--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/rosu/"
 default = []
 serialize = ["serde_repr"]
 metrics = ["prometheus"]
+cache = ["darkredis", "serialize"]
 
 [dependencies]
 bitflags     = "1.2"
@@ -24,9 +25,17 @@ serde        = "1.0"
 serde_derive = "1.0"
 serde_json   = "1.0"
 
+[dependencies.darkredis]
+version  = "0.7"
+optional = true
+
 [dependencies.futures]
 version          = "0.3"
 default-features = false
+
+[dependencies.prometheus]
+version  = "0.9"
+optional = true
 
 [dependencies.reqwest]
 version          = "0.10"
@@ -35,10 +44,6 @@ features         = ["rustls-tls"]
 
 [dependencies.serde_repr]
 version  = "0.1"
-optional = true
-
-[dependencies.prometheus]
-version  = "0.9"
 optional = true
 
 [dev-dependencies]
