--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,15 @@ metrics = ["prometheus"]
 [dependencies]
 bitflags     = "1.2"
 chrono       = "0.4"
-governor     = "0.2"
 log          = "0.4"
 serde        = "1.0"
 serde_derive = "1.0"
 serde_json   = "1.0"
+
+[dependencies.governor]
+version          = "0.3"
+default-features = false
+features         = ["std", "jitter", "quanta"]
 
 [dependencies.futures]
 version          = "0.3"
