--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,6 @@ cache = ["darkredis", "serialize"]
 bitflags     = "1.2"
 chrono       = "0.4"
 log          = "0.4"
-serde        = "1.0"
-serde_derive = "1.0"
 serde_json   = "1.0"
 
 [dependencies.darkredis]
@@ -45,6 +43,10 @@ optional = true
 version          = "0.10"
 default-features = false
 features         = ["rustls-tls"]
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
 
 [dependencies.serde_repr]
 version  = "0.1"
