--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,10 +53,11 @@ version  = "0.1"
 optional = true
 
 [dependencies.tokio]
-version = "0.2"
+version = "1.0"
 default-features = false
+features = ["time"]
 
 [dev-dependencies]
 env_logger = "0.8"
 kankyo     = "0.3"
-tokio      = { version = "0.2", features = ["rt-core", "macros", "time"] }
+tokio      = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
