--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name          = "rosu"
 version       = "0.5.0"
 authors       = ["MaxOhn <ohn.m@hotmail.de>"]
 edition       = "2018"
-description   = "A fully functional wrapper for the osu! API"
+description   = "An osu! API v1 wrapper"
 license       = "MIT"
 readme        = "Readme.md"
 keywords      = ["osu", "api", "wrapper"]
@@ -17,47 +17,20 @@ metrics = ["prometheus"]
 cache = ["darkredis", "serialize"]
 
 [dependencies]
-bitflags     = "1.2"
-chrono       = "0.4"
-log          = "0.4"
-serde_json   = "1.0"
-
-[dependencies.bytes]
-version = "1.0"
-default-features = false
-
-[dependencies.darkredis]
-version  = "0.8"
-optional = true
-
-[dependencies.futures-util]
-version = "0.3"
-default-features = false
-features = ["std"]
-
-[dependencies.prometheus]
-version  = "0.11"
-optional = true
-
-[dependencies.reqwest]
-version          = "0.11"
-default-features = false
-features         = ["rustls-tls"]
-
-[dependencies.serde]
-version = "1.0"
-features = ["derive"]
-
-[dependencies.serde_repr]
-version  = "0.1"
-optional = true
-
-[dependencies.tokio]
-version = "1.0"
-default-features = false
-features = ["time"]
+bitflags = { version = "1.2" }
+bytes = { version = "1.0", default-features = false }
+chrono = { version = "0.4" }
+darkredis = { version = "0.8", optional = true }
+futures-util = { version = "0.3", default-features = false, features = ["std"] }
+log = { version = "0.4" }
+prometheus = { version = "0.11", optional = true }
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+serde_repr = { version = "0.1", optional = true }
+tokio = { version = "1.0", default-features = false, features = ["time"] }
 
 [dev-dependencies]
 env_logger = { version = "0.10" }
-dotenvy    = { version = "0.15" }
-tokio      = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
+dotenvy = { version = "0.15" }
+tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
