--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ cache = ["darkredis", "serialize"]
 [dependencies]
 bitflags = { version = "1.2" }
 bytes = { version = "1.0", default-features = false }
-chrono = { version = "0.4" }
 darkredis = { version = "0.8", optional = true }
 futures-util = { version = "0.3", default-features = false, features = ["std"] }
 log = { version = "0.4" }
@@ -28,6 +27,7 @@ reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 serde_repr = { version = "0.1", optional = true }
+time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "std"] }
 tokio = { version = "1.0", default-features = false, features = ["time"] }
 
 [dev-dependencies]
