--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 serde_repr = { version = "0.1", optional = true }
+thiserror = { version = "1.0" }
 time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "std"] }
 tokio = { version = "1.0", default-features = false, features = ["time"] }
 
