chore: adjusted package metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name          = "rosu"
 version       = "0.5.0"
 authors       = ["MaxOhn <ohn.m@hotmail.de>"]
 edition       = "2018"
-description   = "An osu! API v1 wrapper"
+description   = "An osu!api v1 wrapper"
 license       = "MIT"
-readme        = "Readme.md"
+readme        = "README.md"
 keywords      = ["osu", "api", "wrapper"]
 repository    = "https://github.com/MaxOhn/rosu"
 documentation = "https://docs.rs/rosu/"
